# Selkie

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/console_client/: CMakeLists.txt
apps/gui_server/: CMakeLists.txt
apps/gui_server/src/: gui.cpp  main.cpp  main_window.cpp  main_window.hpp  test_map.hpp
apps/gui_server/src/gui/: gui.cpp  gui.hpp
apps/gui_server/src/inspectors/: component_inspector.hpp  debug_info_inspector.hpp  hitbox_inspector.hpp  minion_inspector.hpp  minion_spawner_inspector.hpp  position_inspector.cpp  position_inspector.hpp  targeting_inspector.hpp  team_inspector.hpp
apps/gui_server/src/views/: minion_view.cpp  minion_view.hpp  view.hpp
apps/gui_server/src/windows/: main_window.cpp  main_window.hpp  world_inspector.cpp  world_inspector.hpp  world_view.cpp  world_view.hpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
apps/server/src/network/: ENetServer.h  MsgPackSerializer.h  enetserver.cpp  enetserver.h  eventsbuffer.h  message.h  msgpackserializer.h  serializer.h
libs/protocol/: CMakeLists.txt
libs/protocol/include/: messagequeue.h
libs/server_core/: CMakeLists.txt
libs/server_core/include/selkie/: components.hpp  game_loop.hpp  map_data.hpp  system.hpp  systems.hpp  test_system.hpp  time.hpp  vector2.hpp  world.hpp
libs/server_core/include/selkie/math/: r_tree.hpp  vector2.hpp
libs/server_core/include/selkie/minions/: lane_movement_system.hpp  minion_spawner_system.cpp  minion_spawner_system.hpp  waypoint_movement_system.hpp
libs/server_core/src/: game_loop.cpp  systems.cpp  test_system.cpp
libs/server_core/src/combat/: search_tree_update_system.cpp  search_tree_update_system.hpp  search_trees.hpp
libs/server_core/src/math/: r_tree.hpp
libs/server_core/src/minions/: lane_movement_system.cpp  minion_spawner_system.cpp  targeting_system.cpp  targeting_system.hpp  waypoint_movement_system.cpp
libs/server_core/src/network/: enetserver.cpp  enetserver.h  events.h
src/console_client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  main.cpp
utils/ci/: Dockerfile
